# pdm-note

./: .gitignore  CMakeLists.txt  cApp.cpp  cApp.h  cMain.cpp  cMain.h  id.h  pdm-sync.cpp  pdm-sync.h  pdmrc.cpp  pdmrc.h  tester.cpp
file_handles/: Tree_Ctrl.cpp  Tree_Ctrl.h  pdm-sync.cpp  pdm-sync.h  pdmrc.cpp  pdmrc.h
include/: cMain.h
pdm-network/: CMakeLists.txt  pdm-network.cpp  pdm-network.h
pdm-network/include_linux/: Makefile
pdm-network/include_linux/curl/: Makefile
pdm-network/lib_linux/pkgconfig/: libcurl.pc
pdm-network/test/: test.cpp
safety/: CMakeLists.txt  cc20_dev.cpp  cc20_multi.cpp
src/: cApp.cpp  cMain.cpp
